# multiple-agent-system

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING_STRATEGY.md  pyproject.toml  scan_transcripts.py
docs/: PLAN.md  reliability-gaps.md  testing-strategy.md
src/mas/: alert_notifier.py  audit.py  board.py  cli.py  config.py  cost_helpers.py  cron.py  current_subtask.py  daemon.py  doctor.py  errors.py  events.py  graph.py  ids.py  logging.py  notify.py  patterns.py  pricing.py  proposals.py  roles.py  schemas.py  state.py  stats.py  summary.py  tick.py  trace.py  transitions.py  verify.py  webhooks_cmd.py  worktree.py
templates/: config.yaml  roles.yaml
templates/prompts/: arbiter.md  evaluator.md  implementer.md  orchestrator.md  proposer.md  tester.md
tests/: conftest.py  test_audit.py  test_board.py  test_budget_forecast.py  test_claude_code.py  test_cli.py  test_cli_config_show.py  test_cli_doctor.py  test_cli_pr.py  test_cli_stats.py  test_cli_upgrade.py  test_cli_verify.py  test_cli_webhooks.py  test_config.py  test_config_reload.py  test_config_validation.py  test_cost_anomaly.py  test_cost_budget_schema.py  test_cost_dashboard.py  test_cost_estimate.py  test_cron.py  test_current_subtask.py  test_current_subtask_web.py  test_daemon.py  test_daemon_json_logs.py  test_daemon_log_rotation.py  test_daemon_pause.py  test_dry_run_child.py  test_events.py  test_failure_pattern_filter.py  test_gemini_cli.py  test_graph.py  test_health_check.py  test_ids.py  test_logging.py  test_ollama.py  test_opencode.py  test_orphan.py  test_parsing.py  test_pattern_prompt.py  (+32 more)
(+37 files in other folders)
